--- a/seccion 3/1. Hola Mundo/src/app/components/body.component.html
+++ b/seccion 3/1. Hola Mundo/src/app/components/body.component.html
@@ -2,11 +2,14 @@
   <div class="col-md-6">
     <h1>*ngIf</h1>
     <hr>
-    <div class="card text-white bg-primary mb-3" style="max-width: 20rem;">
-        <div class="card-header">Header</div>
+    <button class="btn btn-outline-primary btn-block" (click)="mostrar=!mostrar">
+      Mostrar/Ocultar
+    </button>
+    <br>
+    <div class="card text-white bg-primary mb-3" style="max-width: 20rem;" *ngIf="mostrar">
         <div class="card-body">
-          <h4 class="card-title">Primary card title</h4>
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+          <h4 class="card-title">{{frase.autor}}</h4>
+          <p class="card-text">{{frase.mensaje}}</p>
         </div>
     </div>
   </div>
@@ -14,11 +17,7 @@
     <h1>*ngFor</h1>
     <hr>
     <ul class="list-group">
-      <li class="list-group-item">Item X</li>
-      <li class="list-group-item">Item X</li>
-      <li class="list-group-item">Item X</li>
-      <li class="list-group-item">Item X</li>
-      <li class="list-group-item">Item X</li>
+      <li class="list-group-item" *ngFor="let personaje of personajes; let i=index">{{i+1}}. {{personaje}}</li>
     </ul>
   </div>
 </div>
