clase 48 routerLink y routerLinkActive

--- a/seccion 4/spa/src/app/components/about/about.component.html
+++ b/seccion 4/spa/src/app/components/about/about.component.html
@@ -1,3 +1,4 @@
-<p>
-  about works!
-</p>
+<h1 class="animated fadeIn fast">Sobre Comic App</h1>
+
+<hr>
+<p class="animated fadeIn">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum, nemo. Veritatis molestiae dolorem illo facilis laudantium eius accusantium tempora nesciunt, aut repudiandae quia nostrum hic aliquid, qui asperiores beatae sint, id itaque? Nostrum laborum reprehenderit provident, quod deleniti dolor et quas corporis ratione sunt nam temporibus in. Ad, necessitatibus quidem.</p>
