--- a/seccion 4/spa/src/app/components/shared/navbar/navbar.component.html
+++ b/seccion 4/spa/src/app/components/shared/navbar/navbar.component.html
@@ -9,12 +9,16 @@
 
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
-      <li class="nav-item active">
-        <a class="nav-link" href="#">Home </a>
+      <!-- Active es la clase para que se vea mas blanquito -->
+      <li class="nav-item active" routerLinkActive="active">
+        <a class="nav-link" [routerLink]="['home']">Home</a>
       </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Link</a>
+      <li class="nav-item"  routerLinkActive="active">
+        <a class="nav-link" [routerLink]="['heroes']">Heroes</a>
       </li>
+      <li class="nav-item"  routerLinkActive="active">
+          <a class="nav-link" [routerLink]="['about']">About</a>
+        </li>
     </ul>
     <form class="form-inline my-2 my-lg-0">
       <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
