--- a/seccion 4/spa/src/app/components/heroes/heroes.component.html
+++ b/seccion 4/spa/src/app/components/heroes/heroes.component.html
@@ -2,12 +2,13 @@
 <hr>
 
 <div class="card-columns">
-    <div class="card">
-      <img class="card-img-top" src="assets/img/aquaman.png" alt="Card image cap">
+    <div class="card" *ngFor="let heroe of heroes" >
+      <!--<img class="card-img-top" src="{{heroe.img}}" alt="Card image cap">--> <!-- Esto y la sig linea es la misma forma de traer los datos nada más con interpolación o la nueva forma de angular 2-->
+      <img class="card-img-top" [src]="heroe.img" [alt]="heroe.nombre">
       <div class="card-body">
-        <h4 class="card-title">Card title</h4>
-        <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
-        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+        <h4 class="card-title">{{heroe.nombre}}</h4>
+        <p class="card-text">{{heroe.bio}}</p>
+        <p class="card-text"><small class="text-muted">{{heroe.aparicion}}</small></p>
         <button class="btn btn-outline-primary btn-block">Ver más</button>
       </div>
     </div>
