--- a/seccion 4/spa/src/app/components/heroe/heroe.component.html
+++ b/seccion 4/spa/src/app/components/heroe/heroe.component.html
@@ -1,8 +1,8 @@
-<h1>Nombre del heroe <small>fecha aparicion</small></h1>
+<h1 class="animated fadeIn">{{heroe.nombre}} <small>{{heroe.aparicion}}</small></h1>
 
 <hr>
 
-<div class="row">
+<div class="row animated fadeIn fast">
   <div class="col-md-4">
       <img [src]="heroe.img" [alt]="heroe.nombre" class="img-fluid">
       <br><br>
@@ -13,7 +13,8 @@
       <hr>
       <p>{{heroe.bio}}</p>
       <div>
-        <img src="assets/img/{{heroe.casa}}.ico" [alt]="heroe.casa" width="100px" height="100px">
+        <img *ngIf="heroe.casa=='Marvel'" src="assets/img/Marvel.ico" [alt]="heroe.casa" class="img-logo">
+        <img *ngIf="heroe.casa=='DC'" src="assets/img/DC.ico" [alt]="heroe.casa" class="img-logo">
       </div>
   </div>
 </div>
