--- a/seccion 4/spa/src/styles.css
+++ b/seccion 4/spa/src/styles.css
@@ -6,6 +6,11 @@ body{
     margin-top: 10px;
 }
 
+.img-logo{
+  width: 120px;
+  height: 120px;
+}
+
 /* animaciones */
 .animated {
     -webkit-animation-duration: 1s;
