--- a/seccion 5/pipes/src/app/app.component.html
+++ b/seccion 5/pipes/src/app/app.component.html
@@ -20,8 +20,30 @@
             <th scope="row">{{ nombre }}</th>
             <td>lowercase</td>
             <td>{{ nombre|lowercase }}</td>
-          </tr>
+        </tr>
+        <tr>
+            <th scope="row">{{ nombre }}</th>
+            <td>slice:3</td>
+            <td>{{ nombre|slice:3 }}</td>
+        </tr>
+        <tr>
+            <th scope="row">{{ nombre }}</th>
+            <td>slice:0:3</td>
+            <td>{{ nombre|slice:0:3 }}</td>
+        </tr>
+        <tr>
+            <th scope="row">{{ arreglo }}</th>
+            <td>slice:1:5</td>
+            <td>{{ arreglo|slice:1:5 }}</td>
+        </tr>
         
       </tbody>
+    </table>
+
+    <h3>Slice</h3>
+    <table>
+      <ul>
+        <li *ngFor="let item of arreglo | slice:5:20"> {{item}}</li>
+      </ul>
     </table>
 </div>
