clase 68 number o decimal pipe

--- a/seccion 5/pipes/src/app/app.component.html
+++ b/seccion 5/pipes/src/app/app.component.html
@@ -36,6 +36,21 @@
             <td>slice:1:5</td>
             <td>{{ arreglo|slice:1:5 }}</td>
         </tr>
+        <tr>
+            <th scope="row">{{ PI }}</th>
+            <td>number</td>
+            <td>{{ PI|number }}</td>
+        </tr>
+        <tr>
+            <th scope="row">{{ PI }}</th>
+            <td>number:"3.0-0"</td>
+            <td>{{ PI|number:"3.0-0" }}</td>
+        </tr>
+        <tr>
+            <th scope="row">{{ PI }}</th>
+            <td>number:"3.1-2"</td>
+            <td>{{ PI|number:"3.1-2" }}</td>
+        </tr>
         
       </tbody>
     </table>
