clase 69 pipe porcentaje

--- a/seccion 5/pipes/src/app/app.component.html
+++ b/seccion 5/pipes/src/app/app.component.html
@@ -51,6 +51,16 @@
             <td>number:"3.1-2"</td>
             <td>{{ PI|number:"3.1-2" }}</td>
         </tr>
+        <tr>
+            <th scope="row">{{ a }}</th>
+            <td>percent</td>
+            <td>{{ a|percent }}</td>
+        </tr>
+        <tr>
+            <th scope="row">{{ a }}</th>
+            <td>percent:"2.2-3"</td>
+            <td>{{ a|percent:"2.2-3" }}</td>
+        </tr>
         
       </tbody>
     </table>
