--- a/seccion 5/pipes/src/app/app.component.html
+++ b/seccion 5/pipes/src/app/app.component.html
@@ -61,6 +61,31 @@
             <td>percent:"2.2-3"</td>
             <td>{{ a|percent:"2.2-3" }}</td>
         </tr>
+        <tr>
+            <th scope="row">{{ salario }}</th>
+            <td>currency</td>
+            <td>{{ salario|currency}}</td>
+        </tr>
+        <tr>
+            <th scope="row">{{ salario }}</th>
+            <td>currency:"MXN"</td>
+            <td>{{ salario|currency:"MXN"}}</td>
+        </tr>
+        <tr>
+            <th scope="row">{{ salario }}</th>
+            <td>currency:"MXN":true</td>
+            <td>{{ salario|currency:"MXN":true}}</td>
+        </tr>
+        <tr>
+            <th scope="row">{{ salario }}</th>
+            <td>currency:"MXN":true:"5.2-3"</td>
+            <td>{{ salario|currency:"MXN":true:"5.2-3"}}</td>
+        </tr>
+        <tr>
+            <th scope="row">{{ salario }}</th>
+            <td>number:".2-2"</td>
+            <td>{{ salario|number:".2-2"}}</td>
+        </tr>
         
       </tbody>
     </table>
