--- a/seccion 5/pipes/src/app/app.component.html
+++ b/seccion 5/pipes/src/app/app.component.html
@@ -96,4 +96,11 @@
         <li *ngFor="let item of arreglo | slice:5:20"> {{item}}</li>
       </ul>
     </table>
+
+    <h4>JSON</h4>
+    <pre>
+        {{ heroe|json }}
+    </pre>
+  
+    <br><br><br>
 </div>
