--- a/seccion 5/pipes/src/app/app.component.html
+++ b/seccion 5/pipes/src/app/app.component.html
@@ -86,6 +86,12 @@
             <td>number:".2-2"</td>
             <td>{{ salario|number:".2-2"}}</td>
         </tr>
+
+        <tr>
+            <th scope="row">{{ valorDePromesa }}</th>
+            <td>async</td>
+            <td>{{ valorDePromesa| async }}</td>
+        </tr>
         
       </tbody>
     </table>
