--- a/seccion 5/pipes/src/app/app.component.html
+++ b/seccion 5/pipes/src/app/app.component.html
@@ -107,6 +107,16 @@
             <td>date:'MMMM - dd'</td>
             <td>{{ fecha| date:'MMMM - dd' }}</td>
         </tr>  
+        <tr>
+            <th scope="row">{{ nombre2 }}</th>
+            <td>capitalizado</td>
+            <td>{{ nombre2| capitalizado }}</td>
+        </tr>
+        <tr>
+            <th scope="row">{{ nombre2 }}</th>
+            <td>capitalizado:false</td>
+            <td>{{ nombre2| capitalizado:false }}</td>
+        </tr>
         
       </tbody>
     </table>
