--- a/seccion 5/pipes/src/app/app.component.html
+++ b/seccion 5/pipes/src/app/app.component.html
@@ -132,6 +132,9 @@
     <pre>
         {{ heroe|json }}
     </pre>
+    <h4>Youtube <small>Video</small></h4>
+    <hr>
+    <iframe width="560" height="315" [src]="video|domseguro:'https://www.youtube.com/embed/'" frameborder="0" allowfullscreen></iframe>
   
     <br><br><br>
 </div>
