--- a/seccion 6/spotiapp/src/app/components/shared/navbar/navbar.component.html
+++ b/seccion 6/spotiapp/src/app/components/shared/navbar/navbar.component.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-  <a class="navbar-brand" href="#">
+  <a class="navbar-brand" [routerLink]="['home']">
     <img src="/assets/img/banner-ico.png" width="30" height="30" class="d-inline-block align-top" alt="">
      SpotiApp
   </a>
@@ -9,11 +9,11 @@
 
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
-      <li class="nav-item active">
-        <a class="nav-link" href="#">Home</a>
+      <li class="nav-item" routerLinkActive="active">
+        <a class="nav-link" [routerLink]="['home']">Home</a>
       </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Buscar</a>
+      <li class="nav-item" routerLinkActive="active">
+        <a class="nav-link" [routerLink]="['buscar']">Buscar</a>
       </li>
     </ul>
   </div>
