--- a/seccion 6/spotiapp/src/app/components/search/search.component.html
+++ b/seccion 6/spotiapp/src/app/components/search/search.component.html
@@ -1,3 +1,17 @@
-<p>
-  search works!
-</p>
+<div class="container top-30">
+  <div class="row">
+    <h1>{{termino}}</h1>
+  
+    <div class="com-md-3">
+      <label for="termino">Buscador de Artistas: </label>
+      <input type="text" name="termino" placeholder="Buscar por Artista" [(ngModel)]="termino" class="form-control" (keyup)="buscarArtista()"> 
+      <hr>
+    </div>
+  </div>
+
+  <div class="col-md-9">
+    <ul>
+      <li *ngFor="let artista of _spotifyService.artistas" >{{artista.name}}</li>
+    </ul>
+  </div>
+</div>
