--- a/seccion 6/spotiapp/src/app/components/search/search.component.html
+++ b/seccion 6/spotiapp/src/app/components/search/search.component.html
@@ -10,8 +10,12 @@
   </div>
 
   <div class="col-md-9">
-    <ul>
-      <li *ngFor="let artista of _spotifyService.artistas" >{{artista.name}}</li>
-    </ul>
+    <div class="row">
+      <div class="class-md-3" *ngFor="let artista of _spotifyService.artistas" >
+        <img [src]="artista.images|sinfoto" alt="" class="img-fluid img-thumbnail">
+        <p>{{artista.name}}</p>
+        <hr>
+      </div>
+    </div>
   </div>
 </div>
