--- a/seccion 6/spotiapp/src/app/components/search/search.component.html
+++ b/seccion 6/spotiapp/src/app/components/search/search.component.html
@@ -11,7 +11,7 @@
 
   <div class="col-md-9">
     <div class="row">
-      <div class="class-md-3" *ngFor="let artista of _spotifyService.artistas" >
+      <div class="class-md-3 puntero text-center" *ngFor="let artista of _spotifyService.artistas" [routerLink] = "['/artista', artista.id]" >
         <img [src]="artista.images|sinfoto" alt="" class="img-fluid img-thumbnail">
         <p>{{artista.name}}</p>
         <hr>
