--- a/seccion 6/spotiapp/src/styles.css
+++ b/seccion 6/spotiapp/src/styles.css
@@ -75,3 +75,31 @@ hr{
 .top-30{
   margin-top:30px;
 }
+
+.img-pista{
+  width: 100px;
+  height: 100px;
+  margin-bottom: 10px;
+  margin-top: 10px;
+}
+
+.cancion{
+  border: 1px solid #888;
+  margin-bottom: 15px;
+  padding-left: 15px;
+  padding-top: 0px;
+  background-color: #e6e6e6;
+}
+
+.nombre-pista{
+  color: #b01919;
+  font-size: 1.2em;
+  font-family: "Helvetica";
+  padding: 30px 0px;
+  font-weight: bold;
+}
+
+.nombre-artista{
+  font-size: 1.8em;
+  font-weight: bold;
+}
