--- a/seccion 6/spotiapp/src/app/components/artista/artista.component.html
+++ b/seccion 6/spotiapp/src/app/components/artista/artista.component.html
@@ -1,27 +1,53 @@
-<div class="container">
+<div class="container" *ngIf="artista">
   <div class="row  top-30">
     <div class="col-md-3">
-      <img [src]="artista.images[1].url" alt="" class="img-fluid rounded img-thumbnail">
+      <img [src]="artista.images|sinfoto" alt="" class="img-fluid rounded img-thumbnail img-circle">
     </div>
     <div class="col-md-9 text-center">
-        <p class="nombre-artista">{{artista.name}}</p>
-        <a href="" class="btn btn-danger">Regresar</a>
-        <a href="" class="btn btn-success">Abrir en Spotify</a>
+        <h3 class="nombre-artista">{{artista.name}} <br><small>Popularidad: {{artista.popularity}}</small></h3>
+        <hr>
+        <a [routerLink]="['/buscar']" class="btn btn-danger">Regresar</a>
+        <a [href]="artista.external_urls?.spotify" class="btn btn-success">Ver Página del Artista</a>
     </div>
   </div>
   <br><br>
-  <h3>Top tracks</h3>
-  <hr>
-
-  <div class=" row cancion" *ngFor="let pista of pistas" >
-      <div class="col-md-2">
-        <img [src]="pista.album.images[1].url" alt="Algo aqui" class="img-fluid rounded img-pista">
-      </div>
-      <div class="col-md-10">
-          <p class="text-left nombre-pista">
-            {{pista.name}}
-          </p>
-      </div>
+  <div *ngIf="pistas">
+    <h3>Top tracks!</h3>
+    <hr>
+    <div class="col-md-12">
+        <div class="table-responsive">
+            <table class="table table-inverse table-hover">
+              <thead>
+                <tr>
+                  <th>#</th>
+                  <th>Foto</th>
+                  <th>Canción</th>
+                  <th>Popularidad</th>
+                  <th>Preview</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr *ngFor="let pista of pistas; let i=index;">
+                    <td>{{i+1}}</td> 
+                    <td>
+                      <img [src]="pista.album?.images|sinfoto" alt="Algo aqui" class="img-fluid rounded img-pista">
+                    </td>
+                    <td>
+                    {{pista.name}}
+                    </td>
+                    <td>
+                      {{pista.popularity}}
+                    </td>
+                    <td>
+                    <audio controls>
+                      <source [src]="pista.preview_url">
+                        Tú navegador es muy viejo
+                    </audio>
+                  </td>
+                </tr>
+              </tbody>
+            </table>
+          </div>
+    </div>
   </div>
-
 </div>
