--- a/seccion 6/spotiapp/src/styles.css
+++ b/seccion 6/spotiapp/src/styles.css
@@ -82,6 +82,12 @@ hr{
   margin-bottom: 10px;
 }
 
+.img-300{
+  width: 350px;
+  height: 300px;
+  padding: 10px;
+}
+
 .cancion{
   border: 1px solid #888;
   margin-bottom: 15px;
