--- a/seccion 7/deseos/src/pages/pendientes/pendientes.component.html
+++ b/seccion 7/deseos/src/pages/pendientes/pendientes.component.html
@@ -6,5 +6,9 @@
   
   <ion-content padding>
     <h1>Pendientes!!</h1>
+
+    <ul>
+      <li *ngFor="let lista of _listaDeseos.listas" >{{lista.nombre}}</li>
+    </ul>
   </ion-content>
   
