--- a/seccion 7/deseos/src/pages/pendientes/pendientes.component.html
+++ b/seccion 7/deseos/src/pages/pendientes/pendientes.component.html
@@ -1,5 +1,5 @@
 <ion-header>
-    <ion-navbar>
+    <ion-navbar color="primary">
       <ion-title>Lista de Pendientes</ion-title>
     </ion-navbar>
   </ion-header>
@@ -8,7 +8,38 @@
     <h1>Pendientes!!</h1>
 
     <ul>
-      <li *ngFor="let lista of _listaDeseos.listas" >{{lista.nombre}}</li>
+      <!-- <li *ngFor="let lista of _listaDeseos.listas" >{{lista.nombre}}</li>-->
+      <ion-card *ngFor="let lista of _listaDeseos.listas" >
+          
+          <ion-item>
+            BOTON!!
+          </ion-item>
+          
+          <h2>{{lista.nombre}}</h2>
+
+          <ion-list>
+            <ion-item>
+              <ion-icon ios="ios-arrow-dropright-circle" md="md-arrow-dropright-circle"></ion-icon>
+              Tetris
+            </ion-item>
+            <ion-item>
+              <ion-icon ios="ios-arrow-dropright-circle" md="md-arrow-dropright-circle"></ion-icon>
+              Tetris
+            </ion-item>
+            <ion-item>
+              <ion-icon ios="ios-arrow-dropright-circle" md="md-arrow-dropright-circle"></ion-icon>
+              Tetris
+            </ion-item>
+          </ion-list>
+        
+        </ion-card>
     </ul>
+
+    <ion-fab right bottom>
+      <button ion-fab color="primary">
+          <ion-icon ios="ios-add" md="md-add"></ion-icon>
+      </button>
+    </ion-fab>
+
   </ion-content>
   
