--- a/seccion 7/deseos/src/pages/pendientes/pendientes.component.html
+++ b/seccion 7/deseos/src/pages/pendientes/pendientes.component.html
@@ -36,7 +36,7 @@
     </ul>
 
     <ion-fab right bottom>
-      <button ion-fab color="primary">
+      <button ion-fab color="primary" (click)="irAgregar()">
           <ion-icon ios="ios-add" md="md-add"></ion-icon>
       </button>
     </ion-fab>
