clase 106 tarea eliminacion del listado

--- a/seccion 7/deseos/src/pages/agregar/agregar.component.html
+++ b/seccion 7/deseos/src/pages/agregar/agregar.component.html
@@ -21,7 +21,7 @@
             </ion-card-content>
         </ion-card>
 
-        <ion-card>
+        <ion-card *ngIf="items.length>0" >
             <ion-card-header>
                 <h3>Items Agregados</h3>
             </ion-card-header>
@@ -31,8 +31,8 @@
                         <button ion-button color="dark" clear>
                             {{item.nombre}}
                         </button>
-                        <button ion-button outline item-right color="danger" clear>
-                            <ion-icon ios="ios-trash" md="md-trash"></ion-icon>
+                        <button ion-button outline item-right color="danger" clear (click)="borrar(i)">
+                            <ion-icon ios="ios-trash" md="md-trash" ></ion-icon>
                             Borrar Item {{i}}
                         </button>
                     </ion-item>
