--- a/seccion 7/deseos/src/pages/pendientes/pendientes.component.html
+++ b/seccion 7/deseos/src/pages/pendientes/pendientes.component.html
@@ -7,9 +7,21 @@
   <ion-content padding>
     <h1>Pendientes!!</h1>
 
+    <ion-grid *ngIf="(_listaDeseos.listas |pendientes ).length == 0" >
+      <ion-row>
+        <ion-col  class="text-center caja-vacia" >
+          <ion-icon class="icono-grande" ios="ios-sunny" md="md-sunny"></ion-icon>
+          <p>
+            No hay ninguna lista.
+          </p>
+        </ion-col>
+      </ion-row>
+    </ion-grid>
+  
+
     <ul>
       <!-- <li *ngFor="let lista of _listaDeseos.listas" >{{lista.nombre}}</li>-->
-      <ion-card *ngFor="let lista of _listaDeseos.listas; let i=index" >
+      <ion-card *ngFor="let lista of _listaDeseos.listas | pendientes; let i=index" >
           
           <ion-item color="dark" (click)="verDetalle(lista, i)">
               <h2>{{lista.nombre}}</h2>
