--- a/seccion 7/deseos/src/pages/terminados/terminados.component.html
+++ b/seccion 7/deseos/src/pages/terminados/terminados.component.html
@@ -1,9 +1,56 @@
 <ion-header>
-    <ion-navbar>
-      <ion-title>Lista de Pendientes</ion-title>
+    <ion-navbar color="primary">
+      <ion-title>Listas Terminadas</ion-title>
     </ion-navbar>
   </ion-header>
   
   <ion-content padding>
-    <h1>No hay nada que ver!!</h1>
+    <h1>Terminadas</h1>
+
+    <ion-grid *ngIf="(_listaDeseos.listas |pendientes:true ).length == 0" >
+      <ion-row>
+        <ion-col  class="text-center caja-vacia" >
+          <ion-icon class="icono-grande" ios="ios-sunny" md="md-sunny"></ion-icon>
+          <p>
+            No hay ninguna lista.
+          </p>
+        </ion-col>
+      </ion-row>
+    </ion-grid>
+    
+    <ul>
+      <!-- <li *ngFor="let lista of _listaDeseos.listas" >{{lista.nombre}}</li>-->
+      <ion-card *ngFor="let lista of _listaDeseos.listas | pendientes:true; let i=index" >
+          
+          <ion-item color="dark" (click)="verDetalle(lista, i)">
+              <h2>{{lista.nombre}}</h2>
+              <ion-note item-right>
+                {{lista.items.length}} items
+              </ion-note>
+          </ion-item>
+          
+          
+
+          <ion-list>
+            <ion-item (click)="verDetalle(lista, i)" *ngFor="let item of lista.items | slice:0:2" >
+                <ion-icon *ngIf="!item.completado"  ios="ios-square-outline" md="md-square-outline"></ion-icon>
+                <ion-icon *ngIf="item.completado"  ios="ios-checkbox-outline" md="md-checkbox-outline"></ion-icon>
+              {{item.nombre}}
+            </ion-item>
+          </ion-list>
+
+          <ion-item *ngIf="lista.items.length > 2" class="text-center" >
+            <ion-icon color="primary" ios="ios-arrow-dropdown" md="md-arrow-dropdown"></ion-icon>
+          </ion-item>
+        
+        </ion-card>
+    </ul>
+
+    <ion-fab right bottom>
+      <button ion-fab color="primary" (click)="irAgregar()">
+          <ion-icon ios="ios-add" md="md-add"></ion-icon>
+      </button>
+    </ion-fab>
+
   </ion-content>
+  
