clase 121 aplicando css a un solo componente

--- a/seccion 8/miscelaneos/src/app/app.component.html
+++ b/seccion 8/miscelaneos/src/app/app.component.html
@@ -2,6 +2,11 @@
   <h1>Demos <small>Angular</small></h1>
   <hr>
 
-  <app-ng-style></app-ng-style>
+  <!--<app-ng-style></app-ng-style>-->
+  <app-css></app-css>
+
+  <p>	
+    Hola mundo desde app Component
+  </p>
 
 </div>
