--- a/seccion 8/miscelaneos/src/app/app.component.html
+++ b/seccion 8/miscelaneos/src/app/app.component.html
@@ -3,8 +3,8 @@
   <hr>
 
   <!--<app-ng-style></app-ng-style>-->
-  <app-css></app-css>
-
+  <!--<app-css></app-css>-->
+  <app-clases></app-clases>
   <p>	
     Hola mundo desde app Component
   </p>
