--- a/seccion 8/miscelaneos/src/app/app.component.html
+++ b/seccion 8/miscelaneos/src/app/app.component.html
@@ -4,8 +4,8 @@
 
   <!--<app-ng-style></app-ng-style>-->
   <!--<app-css></app-css>-->
-  <app-clases></app-clases>
-  <p>	
+  <!--<app-clases></app-clases>-->
+  <p [appResaltado]="'red'">	
     Hola mundo desde app Component
   </p>
 
