--- a/seccion 8/miscelaneos/src/app/app.component.html
+++ b/seccion 8/miscelaneos/src/app/app.component.html
@@ -5,8 +5,9 @@
   <!--<app-ng-style></app-ng-style>-->
   <!--<app-css></app-css>-->
   <!--<app-clases></app-clases>-->
-  <p [appResaltado]="'red'">	
+  <!--<p [appResaltado]="'red'">	
     Hola mundo desde app Component
-  </p>
+  </p>-->
+  <app-ng-switch></app-ng-switch>
 
 </div>
