clase 126 rutas hijas (parte 1)

--- a/seccion 8/miscelaneos/src/app/app.component.html
+++ b/seccion 8/miscelaneos/src/app/app.component.html
@@ -1,3 +1,4 @@
+<app-navbar></app-navbar>
 <div class="container main-container">
   <h1>Demos <small>Angular</small></h1>
   <hr>
@@ -8,6 +9,7 @@
   <!--<p [appResaltado]="'red'">	
     Hola mundo desde app Component
   </p>-->
-  <app-ng-switch></app-ng-switch>
+  <!--<app-ng-switch></app-ng-switch>-->
+  <router-outlet></router-outlet>
 
 </div>
