--- a/seccion 9/authapp/src/app/components/navbar/navbar.component.html
+++ b/seccion 9/authapp/src/app/components/navbar/navbar.component.html
@@ -11,13 +11,13 @@
       <li class="nav-item" routerLinkActive="active">
         <a class="nav-link"[routerLink]="['precios']">Precios</a>
       </li>
-      <li class="nav-item" routerLinkActive="active">
+      <li class="nav-item" routerLinkActive="active" *ngIf="auth.isAuthenticated()" >
         <a class="nav-link" [routerLink]="['protegida']">Protegida</a>
       </li>
     </ul>
     <span class="navbar-text">
-      <button *ngIf="!auth.isAuthenticated()"  class="btn btn-outline-primary" (click)="login()">Ingresar</button>
-      <button *ngIf="auth.isAuthenticated()" class="btn btn-outline-primary" (click)="salir()">Salir</button>
+      <button *ngIf="!auth.isAuthenticated()"  class="btn btn-outline-primary btn-sm" (click)="login()">Ingresar</button>
+      <button *ngIf="auth.isAuthenticated()" class="btn btn-outline-primary btn-sm" (click)="salir()">Salir</button>
     </span>
   </div>
 </nav>
