--- a/seccion 10/formularios/src/app/components/template/template.component.html
+++ b/seccion 10/formularios/src/app/components/template/template.component.html
@@ -1,6 +1,6 @@
 <h4>Formularios <small>template</small></h4>
 <hr>
-<form novalidate=""  (ngSubmit)="guardar()" >
+<form novalidate=""  (ngSubmit)="guardar(forma)" #forma="ngForm" >
 
   <div>
 
@@ -12,7 +12,7 @@
                type="text"
                placeholder="Nombre"
                name="nombre"
-               ngModel
+               [(ngModel)]="usuario.nombre"
                minlength="5"
                required>
       </div>
@@ -25,7 +25,8 @@
         <input class="form-control"
                type="text"
                placeholder="Apellido"
-               ngModel 
+               name="apellido"
+               [(ngModel)]="usuario.apellido"
                required>
       </div>
     </div>
@@ -39,7 +40,8 @@
       <input class="form-control"
              type="email"
              placeholder="Correo electrónico"
-             ngModel 
+             name="email"
+             [(ngModel)]="usuario.email"
              required>
     </div>
   </div>
