--- a/seccion 10/formularios/src/app/components/template/template.component.html
+++ b/seccion 10/formularios/src/app/components/template/template.component.html
@@ -13,8 +13,15 @@
                placeholder="Nombre"
                name="nombre"
                [(ngModel)]="usuario.nombre"
-               minlength="5"
-               required>
+               minlength="3"
+               required
+               #nombre="ngModel">
+        <div *ngIf="nombre.errors?.required" >
+          Este campo es requerido
+        </div>
+        <div *ngIf="nombre.errors?.minlength">
+            Este campo debe tener por lo menos {{nombre.errors.minlength.requiredLength}} caracteres
+          </div>
       </div>
     </div>
 
@@ -42,7 +49,8 @@
              placeholder="Correo electrónico"
              name="email"
              [(ngModel)]="usuario.email"
-             required>
+             required
+             pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,3}$">
     </div>
   </div>
 
