--- a/seccion 10/formularios/src/app/components/template/template.component.html
+++ b/seccion 10/formularios/src/app/components/template/template.component.html
@@ -68,15 +68,72 @@
     </div>
   </div>
 
+  <div class="form-group row">
+      <label class="col-2 col-form-label">País</label>
+      <div class="col-md-8">
+        <select name="pais" id="pais" class="form-control" [(ngModel)]="usuario.pais">
+          <option value="">Selecciona un País</option>
+          <option *ngFor="let pais of paises"  [value]="pais.codigo">{{pais.nombre}}</option>
+        </select>
+      </div>
+  </div>
+
+  <div class="form-group row">
+    <label class="col-2 col-form-label">Sexo</label>
+    <div class="col-md-8">
+        <label class="custom-control custom-radio" *ngFor="let s of sexos" >
+            <input
+                  [(ngModel)]="usuario.sexo"
+                  [value]=s
+                  id="radio1" 
+                  name="sexo" 
+                  type="radio" 
+                  class="custom-control-input">
+            <span class="custom-control-indicator"></span>
+            <span class="custom-control-description">{{s}}</span>
+          </label>
+          <!--<label class="custom-control custom-radio">
+            <input
+                  [(ngModel)]="usuario.sexo"
+                  value="Mujer"  
+                  id="radio1" 
+                  name="sexo" 
+                  type="radio" 
+                  class="custom-control-input">
+            <span class="custom-control-indicator"></span>
+            <span class="custom-control-description">Mujer</span>
+          </label>-->
+
+    </div>
+  </div>
+
+  <div class="form-group row">
+    <label class="col-2 col-form-label">Acepta</label>
+    <div class="col-md-8">
+      <label class="custom-control custom-checkbox">
+        <input 
+              name="acepta"
+              [(ngModel)]="usuario.acepta"
+              type="checkbox" 
+              class="custom-control-input"
+              required>
+        <span class="custom-control-indicator"></span>
+        <span class="custom-control-description">Acepta las condiciones</span>
+      </label>
+    </div>
+  </div>  
+
 
 
   <div class="form-group row">
     <label class="col-2 col-form-label">&nbsp;</label>
     <div class="input-group col-md-8">
-      <button type="submit" class="btn btn-outline-primary"  [disabled]="forma.invalid">
+      <button type="submit" class="btn btn-outline-primary" [disabled]="forma.invalid" >
         Guardar
       </button>
     </div>
   </div>
-
 </form>
+<pre>
+  {{usuario | json}}
+</pre>
