--- a/seccion 10/formularios/src/app/components/data/data.component.html
+++ b/seccion 10/formularios/src/app/components/data/data.component.html
@@ -2,41 +2,42 @@
 <hr>
 <form [formGroup]="forma" (ngSubmit)="guardarCambios()" >
 
-  <div>
-
-    <div class="form-group row">
-      <label class="col-2 col-form-label">Nombre</label>
-      <div class="col-8">
-
-        <input class="form-control"
-               type="text"
-               placeholder="Nombre"
-               formControlName="nombre"
-               [ngClass]="{'is-invalid':forma.get('nombre').errors!=null && forma.get('nombre').touched, 'is-valid':forma.get('nombre').errors==null}" 
-              >
-    
-      <div *ngIf="forma.controls['nombre'].errors?.required" [ngClass]="{'invalid-feedback':forma.controls['nombre'].errors != null}" >
-          Este campo es requerido
+  <div formGroupName="nombrecompleto">
+    <div>
+      <div class="form-group row">
+        <label class="col-2 col-form-label">Nombre</label>
+        <div class="col-8">
+  
+          <input class="form-control"
+                 type="text"
+                 placeholder="Nombre"
+                 formControlName="nombre"
+                 [ngClass]="{'is-invalid':forma.get('nombrecompleto.nombre').errors!=null && forma.get('nombrecompleto.nombre').touched, 'is-valid':forma.get('nombrecompleto.nombre').errors==null}"
+                >
+      
+       <div *ngIf="forma.get('nombrecompleto.nombre').errors?.required" [ngClass]="{'invalid-feedback':forma.get('nombrecompleto.nombre').errors != null}" >
+            Este campo es requerido
+        </div>
+        <div *ngIf="forma.get('nombrecompleto.nombre').errors?.minlength" [ngClass]="{'invalid-feedback':forma.get('nombrecompleto.nombre').errors != null}" >
+            Este campo debe tener por lo menos {{forma.get('nombrecompleto.nombre').errors.minlength.requiredLength}} caracteres
+        </div>
+        </div>
       </div>
-      <div *ngIf="forma.controls['nombre'].errors?.minlength" [ngClass]="{'invalid-feedback':forma.controls['nombre'].errors != null}" >
-          Este campo debe tener por lo menos {{forma.controls['nombre'].errors.minlength.requiredLength}} caracteres
-      </div>
-      </div>
-    </div>
-
-    <div class="form-group row">
-      <label class="col-2 col-form-label">Apellido</label>
-      <div class="col-8">
-
-        <input class="form-control"
-               type="text"
-               placeholder="Apellido"
-               formControlName="apellido"
-               [ngClass]="{'is-invalid':forma.get('apellido').errors!=null && forma.get('apellido').touched, 'is-valid':forma.get('apellido').errors==null}">
-
-        <div *ngIf="forma.controls['apellido'].errors?.required" [ngClass]="{'invalid-feedback':forma.controls['apellido'].errors != null}" >
-          Este campo es requerido
-        </div>      
+  
+      <div class="form-group row">
+        <label class="col-2 col-form-label">Apellido</label>
+        <div class="col-8">
+  
+          <input class="form-control"
+                 type="text"
+                 placeholder="Apellido"
+                 formControlName="apellido"
+                 [ngClass]="{'is-invalid':forma.get('nombrecompleto.apellido').errors!=null && forma.get('nombrecompleto.apellido').touched, 'is-valid':forma.get('nombrecompleto.apellido').errors==null}">
+  
+          <div *ngIf="forma.get('nombrecompleto.apellido').errors?.required" [ngClass]="{'invalid-feedback':forma.get('nombrecompleto.apellido').errors != null}" >
+            Este campo es requerido
+          </div>
+        </div>
       </div>
     </div>
 
@@ -72,6 +73,8 @@
   </div>
 
   {{forma.valid}}
+
+ <!-- {{forma.get('nombrecompleto')|json}}-->
  
 
 </form>
