--- a/seccion 10/formularios/src/app/components/data/data.component.html
+++ b/seccion 10/formularios/src/app/components/data/data.component.html
@@ -62,7 +62,33 @@
   </div>
 
   <div class="form-group row">
-      <label class="col-2 col-form-label">Correr</label>
+      <label class="col-2 col-form-label">Password</label>
+      <div class="col-md-8">
+  
+        <input class="form-control"
+               type="password"
+               placeholder="Contraseña"
+               formControlName="password1"
+               [ngClass]="{'is-invalid':forma.get('email').errors!=null && forma.get('email').touched, 'is-valid':forma.get('email').errors==null}">
+      </div>
+  </div>
+
+  <div class="form-group row">
+      <label class="col-2 col-form-label">Repetir password</label>
+      <div class="col-md-8">
+  
+        <input class="form-control"
+               type="password"
+               placeholder="Repetir contraseña"
+               formControlName="password2"
+               [ngClass]="{'is-invalid':forma.get('email').errors!=null && forma.get('email').touched, 'is-valid':forma.get('email').errors==null}">
+      </div>
+  </div>
+
+
+
+  <div class="form-group row">
+      <label class="col-2 col-form-label">Pasatiempos</label>
       <div class="col-md-8" formArrayName="pasatiempos">
         <input type="text" class="form-control" *ngFor="let pasatiempo of forma.controls['pasatiempos'].controls; let i=index" [formControlName]="i">
       </div>
