--- a/seccion 10/formularios/src/app/components/data/data.component.html
+++ b/seccion 10/formularios/src/app/components/data/data.component.html
@@ -62,6 +62,18 @@
   </div>
 
   <div class="form-group row">
+      <label class="col-2 col-form-label">Username</label>
+      <div class="col-md-8">
+  
+        <input class="form-control"
+               type="text"
+               placeholder="Usuario"
+               formControlName="username"
+               [ngClass]="{'is-invalid':forma.get('email').errors!=null && forma.get('email').touched, 'is-valid':forma.get('email').errors==null}">
+      </div>
+  </div>
+
+  <div class="form-group row">
       <label class="col-2 col-form-label">Password</label>
       <div class="col-md-8">
   
@@ -108,6 +120,9 @@
   </div>
 
   {{forma.valid}}
+  <br>
+  {{forma.status}}
+
 
  <!-- {{forma.get('nombrecompleto')|json}}-->
  
