--- a/seccion 11/heroesapp/src/app/components/heroes/heroe.component.html
+++ b/seccion 11/heroesapp/src/app/components/heroes/heroe.component.html
@@ -5,24 +5,24 @@
 
 <div class="row  animated fadeIn fast">
   <div class="col-md-12">
-    <form>
+    <form (ngSubmit)="guardar()" #forma="ngForm">
       <div class="form-group">
         <label>Nombre</label>
-        <input type="text" name="" class="form-control" placeholder="Nombre del hero" required>
+        <input type="text" name="nombre" class="form-control" placeholder="Nombre del hero" required [(ngModel)]="heroe.nombre">
       </div>
       <div class="form-group">
         <label>Casa</label>
-        <select name=""  class="form-control">
+        <select name="casa"  class="form-control" [(ngModel)]="heroe.casa">
           <option value="Marvel">Marvel</option>
           <option value="DC">DC</option>
         </select>
       </div>
       <div class="form-group">
           <label>Bio</label>
-          <textarea type="text" class="form-control" required></textarea>            
+          <textarea name="bio" type="text" class="form-control" [(ngModel)]="heroe.bio"></textarea>            
       </div>
 
-      <button type="submit" class="btn btn-outline-primary">Guardar Cambios</button>
+      <button type="submit" class="btn btn-outline-primary" [disabled]="!forma.valid">Guardar Cambios</button>
     </form>
   </div>
 </div>
