clase 175 obtener un nodo especifico

--- a/seccion 11/heroesapp/src/app/components/heroes/heroe.component.html
+++ b/seccion 11/heroesapp/src/app/components/heroes/heroe.component.html
@@ -2,6 +2,7 @@
 <hr>
 
 <button class="btn btn-outline-danger" [routerLink]="['heroes']">Regresar</button>
+<button class="btn btn-outline-success" (click)="agregarNuevo(forma)" >Nuevo heroe</button>
 
 <div class="row  animated fadeIn fast">
   <div class="col-md-12">
