--- a/seccion 11/heroesapp/src/app/components/heroes/heroe.component.html
+++ b/seccion 11/heroesapp/src/app/components/heroes/heroe.component.html
@@ -1,4 +1,4 @@
-<h3>Heroe <small>nombre..</small></h3>
+<h3>Heroe <small>{{heroe.nombre}}</small></h3>
 <hr>
 
 <button class="btn btn-outline-danger" [routerLink]="['heroes']">Regresar</button>
