--- a/seccion 11/heroesapp/src/app/components/heroes/heroes.component.html
+++ b/seccion 11/heroesapp/src/app/components/heroes/heroes.component.html
@@ -36,6 +36,8 @@
           </tr>
         </tbody>
       </table>
+      <div class="alert alert-info" *ngIf="(heroes|keys).length == 0 && !loading" ><strong>No hay </strong> registros que mostrar</div>
+      <div class="alert alert-warning" *ngIf="loading" ><strong>Cargando </strong> por favor espere</div>
     </div>
   </div>
 </div>
