--- a/seccion 12/firechat/src/app/app.component.html
+++ b/seccion 12/firechat/src/app/app.component.html
@@ -7,7 +7,9 @@
 <div class="container main-container">
   <h1>Firechat</h1>
   <hr>
-  <div class="chat-window">
+
+  <app-login *ngIf="!_cs.usuario" ></app-login>
+  <div class="chat-window" *ngIf="_cs.usuario" >
     <app-chat></app-chat>
   </div>
 </div>
