--- a/seccion 12/firechat/src/app/app.component.html
+++ b/seccion 12/firechat/src/app/app.component.html
@@ -8,7 +8,16 @@
   <h1>Firechat</h1>
   <hr>
 
+  <div class="row" *ngIf="_cs.usuario" >
+    <div class="col-md-12 text-right">
+      <button class="btn btn-outline-danger" (click)="salir()">
+        Salir
+      </button>
+    </div>
+  </div>
+
   <app-login *ngIf="!_cs.usuario" ></app-login>
+
   <div class="chat-window" *ngIf="_cs.usuario" >
     <app-chat></app-chat>
   </div>
