--- a/seccion 12/firechat/src/app/components/login/login.component.html
+++ b/seccion 12/firechat/src/app/components/login/login.component.html
@@ -2,6 +2,6 @@
   <div class="col-md-12 text-center">
     <p>Ingrese al chat con su cuenta favorita</p>
     <button class="btn outline-primary" (click)="ingresar('google')">Google</button>
-    <button class="btn btn-info" (click)="ingresar('google')">Twitter</button>
+    <button class="btn btn-info" (click)="ingresar('twitter')">Twitter</button>
   </div>
 </div>
