--- a/seccion 12/firechat/src/app/components/chat/chat.component.html
+++ b/seccion 12/firechat/src/app/components/chat/chat.component.html
@@ -22,8 +22,8 @@
   </div>-->
 
   <div *ngFor="let chat of _cs.chats | async" 
-        [ngClass]="{'text-right': _cs.usuario.nombre == chat.nombre, 'text-left': _cs.usuario.nombre != chat.nombre}">
-      <span class="badge" [ngClass]="{'badge-primary': _cs.usuario.nombre == chat.nombre, 'badge-success': _cs.usuario.nombre != chat.nombre}">
+        [ngClass]="{'text-right': _cs.usuario.uid == chat.uid, 'text-left': _cs.usuario.uid != chat.uid}">
+      <span class="badge" [ngClass]="{'badge-primary': _cs.usuario.uid == chat.uid, 'badge-success': _cs.usuario.uid != chat.uid}">
         {{chat.nombre}}
       </span>
       <p>
