--- a/seccion 12/firechat/src/app/components/login/login.component.html
+++ b/seccion 12/firechat/src/app/components/login/login.component.html
@@ -3,5 +3,6 @@
     <p>Ingrese al chat con su cuenta favorita</p>
     <button class="btn outline-primary" (click)="ingresar('google')">Google</button>
     <button class="btn btn-info" (click)="ingresar('twitter')">Twitter</button>
+    <button class="btn btn-info" (click)="ingresar('facebook')" style="background-color:#365899">Facebook</button>
   </div>
 </div>
