versión anterior seccion 13 (hasta aqui quedó y la iniciamos de nuevo)

--- a/seccion 13/peliculas/src/app/components/home/home.component.html
+++ b/seccion 13/peliculas/src/app/components/home/home.component.html
@@ -1,3 +1,29 @@
-<p>
-  home works!
-</p>
+<div class="row">
+    <div class="col-sm-6">
+      <div class="row">
+        <div class="col-md-12 div-pic-1" [ngStyle]="{ 'background-image': 'url(http://image.tmdb.org/t/p/w300/2nFyTvssbtJMLC6eyYwwZ88gALD.jpg)'}"></div>
+      </div>
+      <div class="row">
+        <div class="col-sm-6 div-pic-2" [ngStyle]="{ 'background-image': 'url(http://image.tmdb.org/t/p/w300/2nFyTvssbtJMLC6eyYwwZ88gALD.jpg)'}">
+  
+        </div>
+        <div class="col-sm-6 div-pic-2" [ngStyle]="{ 'background-image': 'url(http://image.tmdb.org/t/p/w300/2nFyTvssbtJMLC6eyYwwZ88gALD.jpg)'}">
+  
+        </div>
+      </div>
+    </div>
+    <div class="col-sm-6">
+      <div class="row">
+        <div class="col-sm-6 div-pic-2" [ngStyle]="{ 'background-image': 'url(http://image.tmdb.org/t/p/w300/2nFyTvssbtJMLC6eyYwwZ88gALD.jpg)'}">
+          
+        </div>
+        <div class="col-sm-6 div-pic-2" [ngStyle]="{ 'background-image': 'url(http://image.tmdb.org/t/p/w300/2nFyTvssbtJMLC6eyYwwZ88gALD.jpg)'}">
+          
+        </div>
+      </div>
+      <div class="row">
+          <div class="col-md-12 div-pic-1" [ngStyle]="{ 'background-image': 'url(http://image.tmdb.org/t/p/w300/2nFyTvssbtJMLC6eyYwwZ88gALD.jpg)'}"></div>
+      </div>
+  
+    </div>
+  </div>
